# spotify-cover-maker

./: .flake8  .gitignore  .golangci.yml  .goreleaser.yaml  404.html  CNAME  LICENSE  README.md  generate_covers.py  go.mod  go.sum  index.html  main.go  mypy.ini  pyproject.toml  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: lint.yaml  publish-site.yaml  release.yaml  test.yaml
assets/javascripts/: bundle.79ae519e.min.js  bundle.83f73b43.min.js  bundle.8e8db93a.min.js
cmd/: fonts.go  generate.go  playground.go  root.go  utils.go
commands/: index.html
commands/fonts/: index.html
commands/generate/: index.html
commands/manage/: index.html
config/covers/: index.html
config/covers.yaml/: index.html
config/covers/gradient/: index.html
pkg/rendering/: planning.go  svg_to_png.go
pkg/templating/: config.go  gradient.go  state.go  templates.go  templating.go
pkg/utils/: utils.go
search/: search_index.json
site/: .scm_state.yaml  covers.yaml  mkdocs.yml  requirements.txt
site/docs/: index.md
site/docs/commands/: fonts.md  generate.md  index.md  manage.md
site/docs/config/: covers.yaml.md
site/docs/config/covers/: gradient.md  index.md
spotify_cover_maker/: __main__.py  render.py  template_data.py
spotify_cover_maker/cli/: app.py  generate.py
spotify_cover_maker/cli/ui/: __init__.py  editor.py  root.py  sidebar.py
spotify_cover_maker/cli/ui/editors/: __init__.py  gradient.py
spotify_cover_maker/cli/ui/screens/: __init__.py  render.py
spotify_cover_maker/models/: __init__.py  covers.py  state.py
spotify_cover_maker/rendering/: __init__.py  plan.py  render.py
tests/rendering/: test_plan.py  test_render.py
tests/rendering/plan_test/: .scm_state.yaml  covers.yaml
